working-assets/css/global.css
/* ... */
.splide__slide img {
    object-position: top;
    min-height: 100%;
}

.splide__pagination {
    margin: 1rem 0;
}

button.splide__pagination__page {
    height: .75rem;
    padding: 0;
    width: 0.75rem;
    background-color: var(--c-grey);
    border-radius: 50%;
    margin: 0.75rem auto;
    transition: background-color 0.2s ease;

    &:not(:disabled):hover {
        background-color: var(--c-dark-grey);
    }

    &[aria-selected] {
        background-color: var(--c-light-grey);

    }
}

productcard-carousel {
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(175px, 350px));
    width: 90vw;
    max-width: var(--max-width);

    & .product_card-media {
            max-height: 60svh;
            width: 100%;
        }
    &.no-carousel {
        & .splide__list {
            transform: translateX(0) !important;
            justify-content: center;
        }

        & .splide__slide:not(.is-active) {
            scale: 1;
        }
    }
}

productcard-carousel .splide__arrows {
    display: flex;
    position: absolute;
    top: 40%;
        z-index: 1;
        left: calc(0px - max(1.25rem, 12px));
            width: calc(100% + 2.5rem);
        justify-content: space-between;
}

productcard-carousel .splide__arrow {
    width: max(2.5rem, 24px);
        height: max(2.5rem, 24px);
    display: grid;
    fill: var(--c-dark-grey);
    transition: fill 0.2s ease, scale 0.2s ease;
    background: color-mix(in lab, var(--c-white), transparent 70%);
    box-shadow: 0 0 5px -1px var(--c-shadow);
        border: 1px solid rgb(0 0 0 / 0.1);
        border-radius: 50%;
        backdrop-filter: blur(3px);
        padding: 0.25rem;

    &:not(:disabled):hover {
        fill: var(--c-dark-grey);
        scale: 1.1;
    }

    & svg {
        width: max(14px, 1rem);
            height: max(14px, 1rem);
    }
}

@media screen and (min-width: 500px) {
    productcard-carousel .splide__slide {
        scale: 1;
        transition: scale 0.3s var(--bezier);

        &:not(.is-active) {
            scale: 0.9;
        }

        /* &:has(+ .is-active),
      &.is-active + .splide__slide {
        scale: 0.95;
      } */
    }
}

.product-grid:not(.splide) {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
    margin: 0 auto;
    column-gap: 10px;
}

.visually-hidden {
    overflow: hidden;
    position: absolute !important;
    clip: rect(0 0 0 0);
    border: 0;
    height: 1px;
    margin: -1px;
    padding: 0;
    width: 1px;
}

.rotate180 {
    transform: rotate(180deg);
}

.rotate90 {
    transform: rotate(90deg);
}

.rotate45 {
    transform: rotate(45deg);
}

.rotate-90 {
    transform: rotate(-90deg);
}

.rotate135 {
    transform: rotate(-135deg);
}

.rotate405 {
    transform: rotate(405deg);
}

svg {
    pointer-events: none;
    transition: color 0.2s ease, fill 0.2s ease;
}

*:hover>svg.Icon--trash {
    color: var(--c-error);
}

page-overlay {
    position: fixed;
    inset: 0;
    backdrop-filter: brightness(0.75) blur(2px);
    z-index: 10;
    opacity: 0;
    pointer-events: none;
    transition: opacity .15s, visibility .15s
}

body.no-scroll page-overlay {
    opacity: 1;
    visibility: visible;
    pointer-events: all;
}

.no-scroll {
    overflow: hidden;
}
.drawer {
    z-index: 11;
}

.accent-bg {
    background-color: var(--c-off-white);
    color: var(--c-dark-grey);
    padding: 1em;
    margin-block: 1em;
    border-radius: var(--radius);

    & a:not[class|='button'],
    & .a:not[class|='button'] {
        color: var(--c-dark-grey);
        &:hover {
                color: var(--c-black);
            }
    }
}



.mob-hide {
    display: none;
    visibility: hidden;
}

.Icon {
    height: 100%;
}

.close-icon {
    rotate: -45deg;
}


.fade-out,
.fade-in {
    opacity: 0;
    position: relative;
    transform: translateY(100px);
    pointer-events: none;
    visibility: hidden;
}

.fade-out {
    height: 0;
    transform: translateY(-100%);
    padding: 0;
    margin: 0;
    transition: all 0.4s var(--bezier);
}

.splide__slide.is-active .fade-in,
.fade-in.active {
    transition: all 0.4s var(--bezier);
    height: auto;
    opacity: 1;
    transform: translateY(0);
    pointer-events: all;
    visibility: visible;
}

.no-height {
    height: 0;
}


.loader {
    --height: 25px;
    animation: loadfade 1.2s linear infinite;
    animation-delay: .3s;
    background-color: var(--accent-background);
    height: min(50%, 25px);
    margin: 0 auto;
    position: relative;
    width: 8.33333px;
    z-index: -1;
    mix-blend-mode: multiply;
}

.loader,
.loader:after,
.loader:before {
    box-shadow: inset 0 0 2px 0 var(--c-black);
    display: block;
    height: var(--height);
    width: calc(var(--height)/3)
}

.loader:after,
.loader:before {
    animation: loadfade 1.2s linear infinite;
    animation-delay: .6s;
    background: var(--accent-background);
    content: "";
    left: calc(var(--height)/2);
    position: absolute
}

.loader:before {
    animation-delay: 0s;
    left: auto;
    right: calc(var(--height)/2)
}

.grid-loader {
    grid-area: 1 / 1;
    opacity: 0.8;
    transition: opacity 0.15s ease;
}

.inverted {
    filter: invert(1)
}

@keyframes loadfade {
    0% {
        background-color: var(--c-black);
        box-shadow: inset 0 0 2px 0 var(--c-black), 0 0 5px 0 #ccc
    }

    66% {
        background-color: var(--c-off-white);
        box-shadow: inset 0 0 2px 0 grey
    }

    to {
        background-color: #fff;
        box-shadow: inset 0 0 2px 0 grey
    }
}

button {
    margin: 0;
    margin: 0;
    background: none;
    border: none;
    cursor: pointer;
}


.buttons-group {
    display: flex;
    gap: 1em;
    flex-wrap: wrap;
    margin-bottom: 2.5rem;
}
/* ... */

